--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "expo": "^21.0.0",
     "lodash": "^4.17.4",
     "react": "16.0.0-alpha.12",
